--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-#spring.datasource.url=jdbc:mysql://root:y8YR4Xg7VBmL7VWSZv69@containers-us-west-44.railway.app:7802/railway?allowPublicKeyRetrieval=true&useSSL=false&rewriteBatchedStatements=true&maxAllowedPacket=104857600
-#spring.datasource.username=root
-#spring.datasource.password=y8YR4Xg7VBmL7VWSZv69
-
-
-spring.datasource.url=jdbc:mysql://localhost:3306/pdfmanagment
+spring.datasource.url=jdbc:mysql://root:HRupv77TfjyHTUikwkln@containers-us-west-119.railway.app:7543/railway
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=HRupv77TfjyHTUikwkln
+
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/pdfmanagment
+#spring.datasource.username=root
+#spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #server.port=8081
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
